--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -40,76 +40,77 @@ jobs:
           powershell Write-VolumeCache D
 
       - name: Build
-        run: cmake --build build --config Release --target package
+        run: cd build && ninja -j1 -v STEPCODE_BLD && cd src/other/ext/STEPCODE_BLD-prefix/src/STEPCODE_BLD-build && ninja clean && ninja -j1 -v
+        #run: cmake --build build --config Release --target package
 
-      - name: Upload Package
-        uses: actions/upload-artifact@v2
-        with:
-          name: BRLCAD_Windows
-          path: ${{ github.workspace }}/build/BRL-CAD*exe
+#     - name: Upload Package
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: BRLCAD_Windows
+#         path: ${{ github.workspace }}/build/BRL-CAD*exe
 
-  linux:
-    name: Ubuntu Latest GCC
-    runs-on: ubuntu-20.04
-    strategy:
-      fail-fast: true
-    steps:
-      - name: Setup - CMake
-        uses: lukka/get-cmake@latest
+# linux:
+#   name: Ubuntu Latest GCC
+#   runs-on: ubuntu-20.04
+#   strategy:
+#     fail-fast: true
+#   steps:
+#     - name: Setup - CMake
+#       uses: lukka/get-cmake@latest
 
-      - name: Setup - Ninja
-        uses: seanmiddleditch/gha-setup-ninja@master
+#     - name: Setup - Ninja
+#       uses: seanmiddleditch/gha-setup-ninja@master
 
-      - name: Checkout
-        uses: actions/checkout@v2
+#     - name: Checkout
+#       uses: actions/checkout@v2
 
-      - name: Configure
-        run: |
-          export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
-          cmake -S . -G Ninja -B build -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
+#     - name: Configure
+#       run: |
+#         export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
+#         cmake -S . -G Ninja -B build -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
 
-      - name: Build
-        run: |
-          export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
-          cmake --build build --config Release --target package
+#     - name: Build
+#       run: |
+#         export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
+#         cmake --build build --config Release --target package
 
-      - name: Upload Package
-        uses: actions/upload-artifact@v2
-        with:
-          name: BRLCAD_Linux
-          path: ${{ github.workspace }}/build/BRL-CAD*gz
+#     - name: Upload Package
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: BRLCAD_Linux
+#         path: ${{ github.workspace }}/build/BRL-CAD*gz
 
-  osx:
-    name: macOS Latest Clang
-    runs-on: macos-latest
-    strategy:
-      fail-fast: true
-    steps:
-      - name: Setup - CMake
-        uses: lukka/get-cmake@latest
+# osx:
+#   name: macOS Latest Clang
+#   runs-on: macos-latest
+#   strategy:
+#     fail-fast: true
+#   steps:
+#     - name: Setup - CMake
+#       uses: lukka/get-cmake@latest
 
-      - name: Setup - Ninja
-        uses: seanmiddleditch/gha-setup-ninja@master
+#     - name: Setup - Ninja
+#       uses: seanmiddleditch/gha-setup-ninja@master
 
-      - name: Checkout
-        uses: actions/checkout@v2
+#     - name: Checkout
+#       uses: actions/checkout@v2
 
-      - name: Configure
-        run: |
-          export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
-          export CC=clang
-          export CXX=clang++
-          cmake -S . -G Ninja -B build -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
+#     - name: Configure
+#       run: |
+#         export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
+#         export CC=clang
+#         export CXX=clang++
+#         cmake -S . -G Ninja -B build -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
 
-      - name: Build
-        run: |
-          export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
-          cmake --build build --config Release --target package
+#     - name: Build
+#       run: |
+#         export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
+#         cmake --build build --config Release --target package
 
-      - name: Upload Package
-        uses: actions/upload-artifact@v2
-        with:
-          name: BRLCAD_OSX
-          path: ${{ github.workspace }}/build/BRL-CAD*gz
+#     - name: Upload Package
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: BRLCAD_OSX
+#         path: ${{ github.workspace }}/build/BRL-CAD*gz
 
 
