--- a/.github/workflows/btest.yml
+++ b/.github/workflows/btest.yml
@@ -45,11 +45,11 @@ jobs:
         #run: cmake --build build --config Release --target STEPCODE_BLD && cd build/src/other/ext/STEPCODE_BLD-prefix/src/STEPCODE_BLD-build && msbuild ALL_BUILD.vcxproj -t:clean && msbuild ALL_BUILD.vcxproj -v:diag
         #run: cmake --build build --config Release --target package
 
-      - name: Upload Package
-        uses: actions/upload-artifact@v2
-        with:
-          name: BRLCAD_Windows
-          path: ${{ github.workspace }}/build/BRL-CAD*exe
+#     - name: Upload Package
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: BRLCAD_Windows
+#         path: ${{ github.workspace }}/build/BRL-CAD*exe
 
   linux:
     name: Ubuntu Latest GCC
@@ -76,11 +76,11 @@ jobs:
           export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
           cmake --build build --config Release --target package
 
-      - name: Upload Package
-        uses: actions/upload-artifact@v2
-        with:
-          name: BRLCAD_Linux
-          path: ${{ github.workspace }}/build/BRL-CAD*gz
+#     - name: Upload Package
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: BRLCAD_Linux
+#         path: ${{ github.workspace }}/build/BRL-CAD*gz
 
   osx:
     name: macOS Latest Clang
@@ -102,17 +102,17 @@ jobs:
           export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
           export CC=clang
           export CXX=clang++
-          cmake -S . -G Ninja -B build -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release -D BRLCAD_ENABLE_STEP=OFF
+          cmake -S . -G Ninja -B build -D ENABLE_ALL=ON -D CMAKE_BUILD_TYPE=Release
 
       - name: Build
         run: |
           export PATH=$ENV{GITHUB_WORKSPACE}:$PATH
           cmake --build build --config Release --target package
 
-      - name: Upload Package
-        uses: actions/upload-artifact@v2
-        with:
-          name: BRLCAD_OSX
-          path: ${{ github.workspace }}/build/BRL-CAD*gz
+#     - name: Upload Package
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: BRLCAD_OSX
+#         path: ${{ github.workspace }}/build/BRL-CAD*gz
 
 
