--- a/db/CMakeLists.txt
+++ b/db/CMakeLists.txt
@@ -72,11 +72,20 @@ function(ADD_G_TARGET in_model folder)
 
   if(${MODEL_TYPE} STREQUAL "asc")
     if (BRLCAD_ENABLE_TCL)
+      if(APPLE)
+      add_custom_command(
+	OUTPUT ${CMAKE_CURRENT_BUILD_DIR_SCRIPT}/${output_file}
+	COMMAND otool -l ${CMAKE_BINARY_DIR}/bin/asc2g 
+	COMMAND asc2g "${CMAKE_CURRENT_SOURCE_DIR}/${in_model}" ${CMAKE_CURRENT_BUILD_DIR_SCRIPT}/${output_file}
+	DEPENDS asc2g "${CMAKE_CURRENT_SOURCE_DIR}/${in_model}"
+	)
+      else(APPLE)
       add_custom_command(
 	OUTPUT ${CMAKE_CURRENT_BUILD_DIR_SCRIPT}/${output_file}
 	COMMAND asc2g "${CMAKE_CURRENT_SOURCE_DIR}/${in_model}" ${CMAKE_CURRENT_BUILD_DIR_SCRIPT}/${output_file}
 	DEPENDS asc2g "${CMAKE_CURRENT_SOURCE_DIR}/${in_model}"
 	)
+      endif(APPLE)
     endif (BRLCAD_ENABLE_TCL)
   endif(${MODEL_TYPE} STREQUAL "asc")
 
