--- a/src/other/ext/CMakeLists.txt
+++ b/src/other/ext/CMakeLists.txt
@@ -299,6 +299,10 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/openscenegraph.dist)
 # static lib building on so we get the stub libraries.
 set(BSL_CACHE ${BUILD_STATIC_LIBS})
 set(BUILD_STATIC_LIBS ON)
+if (BRLCAD_ENABLE_TK)
+  # For FindTCL.cmake
+  set(TCL_ENABLE_TK ON BOOL "enable tk" CACHE)
+endif (NOT BRLCAD_ENABLE_TK)
 include(${CMAKE_CURRENT_SOURCE_DIR}/tcl.cmake)
 include(${CMAKE_CURRENT_SOURCE_DIR}/tk.cmake)
 include(${CMAKE_CURRENT_SOURCE_DIR}/itcl.cmake)
